test/compile_errors/err_pipe_closure_syntax.w
//! expect-check-fail: use 'x => body' instead of '|x| body'
fn main:
    let f = |x| x + 1
